# pong

./: CMakeLists.txt  README.md
src/: detect.c  ping_pong.c
